# py-calc

./: .flake8  pyproject.toml
.github/workflows/: ci.yml
string_calculator/: calculator.py
tests/: test_calculator.py
